--- a/src/components/video_item/video_item.module.css
+++ b/src/components/video_item/video_item.module.css
@@ -1,6 +1,13 @@
 .container {
-  width: 50%;
   padding: 0.2em;
+}
+
+.container.grid {
+  width: 50%;
+}
+
+.container.list {
+  width: 100%;
 }
 
 .video {
@@ -36,3 +43,4 @@
 .channel {
   font-size: 0.6rem;
 }
+
